# AuditAgent-s

./: .env.example  .gitignore  README.md  pyproject.toml
config/: council.example.toml
docs/superpowers/plans/: 2026-04-16-anti-hacker-council.md  2026-04-17-modal-provider-fallback.md
docs/superpowers/specs/: 2026-04-16-anti-hacker-council-design.md  2026-04-17-modal-provider-fallback-design.md  2026-04-19-ollama-provider-and-fallback-chain-design.md  2026-04-24-sequential-thinking-port-design.md
scripts/: smoke_test.py
src/anti_hacker/: __init__.py  config.py  errors.py  server.py
src/anti_hacker/council/: aggregator.py  cache.py  member.py  orchestra.py  prompts.py
src/anti_hacker/io/: debate_log.py  proposals.py
src/anti_hacker/openrouter/: __init__.py  client.py
src/anti_hacker/scanners/: cartographer.py  file_filter.py
src/anti_hacker/tools/: consult.py  investigate.py  logs.py  scan.py  thinking.py
tests/: conftest.py  test_aggregator.py  test_cache.py  test_cartographer.py  test_config.py  test_debate_log.py  test_e2e.py  test_file_filter.py  test_mcp_protocol.py  test_member_fallback.py  test_openrouter_client.py  test_orchestra.py  test_prompts.py  test_proposals.py  test_tools_consult.py  test_tools_investigate.py  test_tools_logs.py  test_tools_scan.py  test_tools_thinking.py
tests/fixtures/: sample_responses.py
