[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anti-hacker"
version = "0.2.0"
description = "MCP server that coordinates 5 free OpenRouter models via 3-round debates"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
]

[project.scripts]
anti-hacker = "anti_hacker.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/anti_hacker"]
branch = true

[tool.hatch.build.targets.wheel]
packages = ["src/anti_hacker"]
